--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,18 @@ name = "rdbc"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "rdbc"
+path = "src/lib.rs"
+
+[[bin]]
+name = "demo"
+path = "src/bin/demo.rs"
+
+[[bin]]
+name = "dbc2json"
+path = "src/bin/dbc2json.rs"
+
 [dependencies]
 anyhow = "1.0.88"
 env_logger = "0.11.5"
