--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,6 @@ env_logger = "0.11.5"
 escape8259 = "0.5.3"
 log = "0.4.22"
 nom = "7.1.3"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 thiserror = "1.0.63"
