--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,4 +24,5 @@ log = "0.4.22"
 nom = "7.1.3"
 serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
+structopt = "0.3.26"
 thiserror = "1.0.63"
