--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "rdbc"
 version = "0.1.0"
+authors = ["MDGSF"]
 edition = "2021"
+description = "dbc parser"
+readme = "README.md"
+repository = "https://github.com/MDGSF/rdbc"
+license-file = "LICENSE"
+keywords = ["dbc", "parser", "format"]
 
 [lib]
 name = "rdbc"
