--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,14 @@ path = "src/bin/json2dbc.rs"
 name = "toutf8"
 path = "src/bin/toutf8.rs"
 
+[[bin]]
+name = "gbk2utf8"
+path = "src/bin/gbk2utf8.rs"
+
+[[bin]]
+name = "utf82gbk"
+path = "src/bin/utf82gbk.rs"
+
 [dependencies]
 anyhow = "1.0.88"
 encoding_rs = "0.8.34"
