--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 description = "dbc parser"
 readme = "README.md"
 repository = "https://github.com/MDGSF/rdbc"
-license-file = "LICENSE"
+license = "MIT OR Apache-2.0"
 keywords = ["dbc", "parser", "format"]
 
 [lib]
