feat: add `decode_cp1252` and snapshot tests
* Add a new decoding function to help decode the most common DBC file format - CP1252
* Use test files to generate parsing results as files using [insta snapshots](https://insta.rs/)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ serde = { version = "1.0.210", features = ["derive"], optional = true }
 serde_json = { version = "1.0.128", optional = true }
 thiserror = "2.0.17"
 
+[dev-dependencies]
+insta = { version = "1.43.2", features = ["yaml"] }
+
 [lints.rust]
 unsafe_code = "forbid"
 unused_qualifications = "warn"
